refine(67): apply experimental-refine-dev to plan 67 new classes