@@ -10,41 +10,31 @@ import java.io.InputStreamReader;
 public class GitTags {
 
     /**
-     * Returns the highest-numbered {@code plan-{planNum}-v*} tag in the repo,
-     * or {@code "plan-{planNum}-v1"} when no tag is present or git is unavailable.
+     * Returns the highest-numbered {@code plan-{N}-v*} tag in the repo,
+     * or {@code plan-{N}-v1} when no tag is present or git is unavailable.
      */
     public String getPlanVersion(int planNum) {
-        String planVersion = "plan-" + planNum + "-v1";
         try {
-            Process process = new ProcessBuilder("git", "tag", "-l",
-                    "plan-" + planNum + "-v*", "--sort=-version:refname").start();
-            try (BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()))) {
-                String line = reader.readLine();
-                if (line != null && !line.trim().isEmpty()) {
-                    planVersion = line.trim();
-                }
+            Process p = new ProcessBuilder("git", "tag", "-l",
+                    versionPrefix(planNum) + "*", "--sort=-version:refname").start();
+            try (BufferedReader r = new BufferedReader(new InputStreamReader(p.getInputStream()))) {
+                String line = r.readLine();
+                p.waitFor();
+                return (line != null && !line.isBlank()) ? line.trim() : defaultVersion(planNum);
             }
-        } catch (IOException e) {
-            // Ignore and use default
+        } catch (IOException | InterruptedException e) {
+            return defaultVersion(planNum);
         }
-        return planVersion;
     }
 
     /**
-     * Computes the next version tag for a plan (e.g. if plan-7-v2 exists, returns plan-7-v3).
+     * Computes the next version tag (e.g. if plan-7-v2 exists, returns plan-7-v3).
      * Returns plan-{N}-v1 if no version tags exist yet.
      */
     public String nextPlanVersion(int planNum) {
         String current = getPlanVersion(planNum);
-        // current is plan-N-vK; parse K and increment
-        int dashV = current.lastIndexOf("-v");
-        if (dashV < 0) return "plan-" + planNum + "-v1";
-        try {
-            int k = Integer.parseInt(current.substring(dashV + 2));
-            return "plan-" + planNum + "-v" + (k + 1);
-        } catch (NumberFormatException e) {
-            return "plan-" + planNum + "-v1";
-        }
+        int k = parseVersion(current);
+        return versionPrefix(planNum) + (k + 1);
     }
 
     /** True when the tag exists locally. */
@@ -63,10 +53,27 @@ public class GitTags {
     /** Creates a local tag at HEAD. Returns true on success. */
     public boolean createTag(String tag) {
         try {
-            Process p = new ProcessBuilder("git", "tag", tag).start();
-            return p.waitFor() == 0;
+            return new ProcessBuilder("git", "tag", tag).start().waitFor() == 0;
         } catch (IOException | InterruptedException e) {
             return false;
+        }
+    }
+
+    private static String versionPrefix(int planNum) {
+        return "plan-" + planNum + "-v";
+    }
+
+    private static String defaultVersion(int planNum) {
+        return versionPrefix(planNum) + "1";
+    }
+
+    private static int parseVersion(String tag) {
+        int dashV = tag.lastIndexOf("-v");
+        if (dashV < 0) return 0;
+        try {
+            return Integer.parseInt(tag.substring(dashV + 2));
+        } catch (NumberFormatException e) {
+            return 0;
         }
     }
 }
